[package]
edition = "2021"
name = "pulldown-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.1.0", default-features = false, features = ["napi4"] }
napi-derive = "2.1.0"
pulldown-cmark = { path = "../", version = "0.9.1", default-features = false }
syntect = "4.6"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
